--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <!-- Update version here and below in the visible area -->
-  <title>Citation Bookmarklet — v2.5 8:48</title>
+  <title>Citation Bookmarklet</title>
   <style>
     body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial; max-width:900px; margin:40px auto; padding:0 20px; color:#111; }
     .bm { display:inline-block; padding:12px 18px; background:#111; color:#fff; border-radius:8px; text-decoration:none; font-weight:600; }
@@ -23,7 +23,7 @@
     (1) <title> above
     (2) the visible version line below (PAGE_VERSION variable)
   -->
-  <div class="version">Bookmarklet version: <strong id="version-text">1.0.4</strong></div>
+  <div class="version">Bookmarklet version: <strong id="version-text">2/5 8:50 a.m.</strong></div>
 
   <h1>Install: Citation Bookmarklet</h1>
 
@@ -31,7 +31,7 @@
 
   <div class="row">
     <!-- Visible anchor users will drag; href will be set at runtime -->
-    <a id="install-link" class="bm" href="#">📚 Cite Article</a>
+    <a id="install-link" class="bm" href="#">Cite Article</a>
     <button id="copy-btn" title="Copy bookmarklet code to clipboard">Copy bookmarklet</button>
   </div>
 
