--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     (1) <title> above
     (2) the visible version line below (PAGE_VERSION variable)
   -->
-  <div class="version">Bookmarklet version: <strong id="version-text">2/5 9:06 a.m.</strong></div>
+  <div class="version">Bookmarklet version: <strong id="version-text">1.0.5</strong></div>
 
   <h1>Install: Citation Bookmarklet</h1>
 
@@ -71,7 +71,7 @@
     var full = 'javascript:' + codeBody;
 
     // Visible page version: change this string on each deploy
-    var PAGE_VERSION = "2/5 9:15 a.m.";
+    var PAGE_VERSION = "2/5 9:37 a.m.";
 
     // Utility: set link href attribute & property and display raw code
     function configureInstallLink() {
